# MDClipView

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml  deploy-pwa.yml
docs/superpowers/specs/: 2026-06-27-mdclipview-technical-design.md
openspec/changes/mdclipview-v1/: .comet.yaml  .openspec.yaml  design.md  proposal.md  tasks.md
public/: manifest.json  sw.js
src/: index.html  main.js  renderer.js  settings.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  tray.rs
